--- a/templates/secrets-roll.html
+++ b/templates/secrets-roll.html
@@ -1,11 +1,21 @@
 <div class="dice-tooltip">
   {{#if action}}<div class="chat-label label-stripe-chat">{{action}}</div>{{/if}}
+  {{#if position}}
+    <div class="chat-label-small label-stripe-chat-small">
+      {{position}} | {{effect}}
+    </div>
+  {{/if}}
   {{#if zeromode}}
     <div class="chat-label-small-red label-stripe-chat-small-red">
      Rolled zero dice, taking lowest 
     </div>
   {{/if}}
   <div class="die {{roll_status}}">{{#if resist_status}}{{resist_status}}{{else}}{{roll_status}}{{/if}}</div>
+
+	{{#if (eq position "desperate")}}
+	<p>Mark <strong>XP</strong> for a desperate action.</p>
+	{{/if}}
+
   <ol class="dice-rolls">
     {{#each this.rolls}}
     {{#if this.result}}
