--- a/templates/actor/agent-sheet.html
+++ b/templates/actor/agent-sheet.html
@@ -332,8 +332,8 @@
         </div>
             </div>
     </section>
-    <section class="tab" data-group="primary" data-tab="bio" style="position:relative;">
-        <div style="width:100%;min-height:40em;display:flex;flex-direction:row;flex-wrap:wrap;">
+    <section class="tab" data-group="primary" data-tab="bio">
+        <div>
         {{editor content=data.description target="data.description" button=true owner=true editable=true}}
         </div>
     </section>
